# sake

./: .gitignore  Dockerfile  README.md  client.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run  run_local  run_local_http  start  websocket_server.py
app/: __init__.py  auth.py  main.py  syneml.py  tools.py
app/docs/: __init__.py  documentation.py
app/forms/: login.py  note.py
app/models/: __init__.py
app/models/html/: file.py  note.py  register.py
app/models/nas/: nas.py  note.py
app/models/properties/: file.py  note.py  tools.py  user.py
app/register/: __init__.py  download.py  edit_note.py  inbox.py  register.py  state_note.py  tools.py
app/src/: auth.py  main.py
app/src/docs/: __init__.py  documentation.py
app/src/forms/: login.py  note.py  page.py
app/src/inbox/: inbox.py  mail.py
app/src/models/: __init__.py
app/src/models/nas/: file.py  (+2 more)
app/src/notes/: __init__.py  actions.py  edit.py  filters.py  manage.py  renders.py  sql.py  views.py
app/src/pages/: __init__.py  actions.py  views.py
app/src/tools/: download.py  mail.py  syneml.py  tools.py  websocket.py
app/static/: style.css
app/static/css/: sidebar.css  style.css  style_1.css  summernote.css
app/static/js/: notifications.js  script.js
app/templates/: base.html  base_new.html  base_page.html  body.html  dashboard.html  error.html  flash.html  links.html  links_cl.html  main.html  sidebar.html  sidebar_icon.html  sidebar_icon_old.html  sidebar_menu_register.html  sidebar_mobile.html  sidebar_pages.html  sidebar_pages_list.html  sidebar_proposals.html  sidebar_proposals_icons.html  sidebar_proposals_list.html  sidebar_registers.html  sidebar_registers2.html  sidebar_registers_icons.html  sidebar_registers_list.html  sidebar_sccr.html  sidebar_sccr_list.html  summernote.html  test.html  upload_file.html  wait.html
app/templates/auth/: auth.html  form_edit_user.html  list_users.html  login_box.html  signup_box.html  user.html
app/templates/docs/: cl_inbox.html  cl_outbox.html  cr.html  docs_cl.html  main.html  registration.html
libsynomail/: __init__.py  classes.py  get_mail.py  nas.py  register.py  scrap_register.py  syneml.py
(+176 files in other folders)
