[tool.poetry]
name = "sake"
version = "1.0.3"
description = ""
authors = ["Antonio Alonso"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.0.2"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
cryptography = "^42.0.5"
flask-wtf = "^1.2.1"
synochat = "^1.0.4"
docx-hitalent = "^0.8.51"
wtforms-sqlalchemy = "^0.4.1"
eml-parser = "^1.17.5"
flask-login = "^0.6.3"
pymysql = "^1.1.0"
flask-babel = "^4.0.0"
jinja2 = "^3.1.3"
babel = "^2.14.0"
setuptools = "^69.5.1"
bootstrap-flask = "^2.4.0"
flask-mobility = "^2.0.1"
flask-sock = "^0.7.0"
gunicorn = "^22.0.0"
websockets = "^12.0"
flask-admin = {extras = ["export", "sqlalchemy-with-utils", "translation"], version = "^1.6.1"}
websocket-client = "^1.8.0"
python-slugify = "^8.0.4"
tinydb = "^4.8.2"
oauth2client = "^4.1.3"
gspread = "^6.2.1"
lxml = "^6.0.2"
requests = "^2.32.5"
simplejson = "^3.20.2"
selenium = "^4.39.0"
optionaldict = "^0.1.2"
passlib = "^1.7.4"
openpyxl = "^3.1.5"
attrdict3 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
